--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,28 +2,33 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_home"
-        android:enabled="true"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_favorites"
-        android:enabled="true"
-        android:icon="@drawable/ic_baseline_favorite_border_24"
-        android:title="Wishlist"
-    />
-    <item
-        android:id="@+id/action_cart"
-        android:icon="@drawable/ic_baseline_shopping_cart_24"
-        android:title="Cart" />
-    <item
-        android:id="@+id/action_account"
-        android:enabled="true"
-        android:icon="@drawable/ic_baseline_account_circle_24"
-        android:title="Account"
-    />
+    <group>
+        <item
+            android:id="@+id/action_home"
+            android:enabled="true"
+            android:icon="@drawable/ic_baseline_home_24"
+            android:title="Home"
+             />
+        <item
+            android:id="@+id/action_favorites"
+            android:enabled="true"
+            android:icon="@drawable/ic_baseline_favorite_border_24"
+            android:title="Wishlist"
+            />
+        <item
+            android:id="@+id/action_cart"
+            android:enabled="true"
+            android:icon="@drawable/ic_baseline_shopping_cart_24"
+            android:title="Cart" />
+        <item
+            android:id="@+id/action_account"
+            android:enabled="true"
+            android:icon="@drawable/ic_baseline_account_circle_24"
+            android:title="Account"
+            />
+    </group>
+
+
 
 
 </menu>
